[package]
name = "app"
version = "1.0.0-beta"
description = "Web application in charge of generating dynamic public preaching turns"
authors = ["Marcos Fernández"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.2", features = [] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
