[package]
name = "ppocgen"
version = "1.0.0-beta"
description = "Web application in charge of generating dynamic public preaching turns"
authors = ["Marcos Fernández"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "ppocgen_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"


[features]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
