[package]
name = "app"
version = "1.0.0-beta"
description = "Web application in charge of generating dynamic public preaching turns"
authors = ["Marcos Fernández"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true
